# documents-to-images

./: .gitignore  CHANGELOG.md  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHING.md  README.md  config.yaml  docs_to_pdf.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
DOCX_PPTX_TXT/: docs_and_pptx_to_pdf.md
doc_converter/: __init__.py  __main__.py
doc_converter/cli/: main.py
doc_converter/core/: __init__.py  batch_processor.py  document_converter.py  docx_converter.py  html_converter.py  pdf_converter.py
doc_converter/tests/: test_integration.py
doc_converter/tests/test_cli/: test_main.py
doc_converter/tests/test_core/: test_batch_processor.py  test_document_converter.py  test_docx_converter.py  test_html_converter.py  test_pdf_converter.py
doc_converter/tests/test_utils/: test_config.py  test_file_handler.py
doc_converter/utils/: __init__.py  config.py  file_handler.py
docs/: api_reference.md  troubleshooting.md
docs/sphinx/: Makefile  changelog.md  cli.md  conf.py  index.md  installation.md  quickstart.md  troubleshooting.md
docs/sphinx/_build/doctrees/: api.doctree  changelog.doctree  cli.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree  troubleshooting.doctree
docs/sphinx/_build/html/: .buildinfo  objects.inv  searchindex.js
docs/sphinx/_build/html/_sources/: api.md.txt  contributing.md.txt  examples.md.txt
documents-to-images-converter/tests/test_core/: test_batch_processor.py  test_document_converter.py  test_html_converter.py
documents-to-images-converter/tests/test_utils/: test_config.py  test_file_handler.py
examples/: advanced_usage.py  usage_examples.py
examples/sample_documents/: sample.html
scripts/: coding.docx  coding.txt  docs.py  docs_to_pdf.py  final.html  html_to_pdf.py  pdf_to_img.py  pptx_to_pdf.py  publish.sh  requirements.txt  test-publish.sh  txt_to_pdf.py
scripts/extra/: docx_to_html.py  txt_to_pdf.py
subprocesses/: sample.docx
subprocesses/docs2pdf/: main.py  sample.txt
tests/: __init__.py  test_docx_converter.py  test_pdf_converter.py
